# memos-openclaw-daily

./: .env.example  .gitignore  README.md  pyproject.toml
docker/openclaw-python/: Dockerfile  Dockerfile.example  compose.snippet.yml
openclaw/: DAILY_REPORT_PROMPT.md  NAS_SETUP.md
scripts/: run_memos_daily.sh
src/memos_daily_report/: __main__.py  cli.py  config.py  memos_client.py  models.py  notifications.py  workflow.py
